# py-jdict

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: test.yml  type.yml
docs/: README.md  index.md
docs/benchmarks/: test_box.py  test_cleverdict.py  test_jdict.py
docs/tutorial/: main.py  test.txt
scripts/: format.sh
search/: search_index.json
src/jdict/: __init__.py  transformer.py
src/pyjdict/: __init__.py  transformer.py
test/unit/: test_jdict.py  test_typed_jdict.py
