[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyjdict"
authors = [{name = "BST Labs", email = "bstlabs@caios.io"}]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"


[project.urls]
Documentation = "https://github.com/bstlabs/py-jdict"
Source = "https://github.com/bstlabs/py-jdict"
Home = "https://github.com/bstlabs/py-jdict"

[project.optional-dependencies]
doc = ["mkdocs-material >=8.1.2"]
dev = [
    "black >=21.9b0",
    "pylint >=2.12.2",
    "isort >=5.9.3",
    "autoflake >=1.4",
    "flake8 >=4.0.1",
    "pre-commit >=2.17.0",
    "pytype >=2022.1.31"
    ]

[tool.isort]
profile = "black"
py_version = 39
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.flit.module]
name = "jdict"